# SHA256

./: CMakeLists.txt  README.md  client.c  control_client.c  server.c
hash/: sha256_utils.c  sha256_utils.h
ipc/: msg_utils.c  msg_utils.h  sem_utils.c  sem_utils.h  shm_utils.c  shm_utils.h
